using future instead

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   shimmer: ^2.0.0
   sqflite: ^2.0.0+4
   path_provider: ^2.0.3
+  scroll_to_index: ^2.1.1
+
 
 dev_dependencies:
   flutter_test:
